[package]
name = "rust-map-reduce"
version = "0.1.0"
authors = ["kevin-margueritte <mrgueritte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full"] }
itertools = "0.10.0"
futures = "0.3.12"
clap = "3.0.0-beta.2"